[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Fontit/new_theme.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=2]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -219.5
margin_top = 14.0
margin_right = 219.5
margin_bottom = 51.0
text = "Kokonkokoajat"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -219.5
margin_top = -80.5
margin_right = 219.5
margin_bottom = 80.5
custom_constants/separation = 20
alignment = 1

[node name="Aloita" type="Label" parent="VBoxContainer"]
margin_top = 11.0
margin_right = 439.0
margin_bottom = 62.0
text = "Aloita"
align = 1
valign = 1

[node name="Button" type="Button" parent="VBoxContainer/Aloita"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 120.0
margin_top = -15.0
margin_right = -120.0
mouse_filter = 1
mouse_default_cursor_shape = 2
flat = true

[node name="Ohjeet" type="Label" parent="VBoxContainer"]
margin_top = 82.0
margin_right = 439.0
margin_bottom = 133.0
text = "Ohjeet"
align = 1
valign = 1

[node name="Button2" type="Button" parent="VBoxContainer/Ohjeet"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 120.0
margin_top = -15.0
margin_right = -120.0
mouse_filter = 1
mouse_default_cursor_shape = 2
flat = true

[node name="Lopeta" type="Label" parent="VBoxContainer"]
margin_top = 153.0
margin_right = 439.0
margin_bottom = 204.0
text = "Lopeta"
align = 1
valign = 1

[node name="Button3" type="Button" parent="VBoxContainer/Lopeta"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 120.0
margin_top = -14.0
margin_right = -102.0
mouse_filter = 1
mouse_default_cursor_shape = 2
flat = true
[connection signal="pressed" from="VBoxContainer/Aloita/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Ohjeet/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="VBoxContainer/Lopeta/Button3" to="." method="_on_Button3_pressed"]
